kubernetes/manifests/lifting-data/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lifting-data-route
  namespace: lifting-data
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway-api
  hostnames:
    - "lifts.acemagic.lab"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lifting-data-web
          port: 80
